Implement OAuth and chores
